# VPrint

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/verbose_print/: style_decorators.py  styles.py  vprint.py
tests/: test_vprint.py
