[metadata]
name = verbose_print
version = 0.0.1
author = Zachary Elkins
author_email = zach.elkins@gmail.com
description = Verbose printing utility library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZachElkins/verbose_print
project_urls =
    Bug Tracker = https://github.com/ZachElkins/verbose_print
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    verbose_print
python_requires = >=3.6
package_dir =
    =src
 zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
data_structures = py.typed

[flake8]
max-line-length = 80